--- a/index.html
+++ b/index.html
@@ -6,41 +6,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/6e1e4b3807.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@300&family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>BootStrap intro</title>
   </head>
   <body>
+    
+    <div class="container">
+      <div class="row white-box mt-5">
 
-    <div class="container white-box">
-      <div class="row">
         <div class="col-md-8">
           <div class="d-flex">
             <div class="flex-shrink-0">
               <img src="./image/profile-pic.png">
             </div>
-            <div class="flex-grow-1 ms-3 mt-3">
-              <h3>Killian Sven</h3>
+            <div class="flex-grow-1 ms-3 mt-2 profile-text">
+              <h2>Apeachicetea</h2>
               <p>Front-end Designer</p>
-              <i class="fas fa-map-marker-alt col-md-12 mb-2"> 경기도 김포시</i>
-              <button type="button" class="btn btn-success">Contact</button>
+              <i class="fas fa-map-marker-alt col-12"> 경기도 김포시</i>
+              <button type="button" class="btn btn-primary btn-sm btn">Contact</button>
             </div>
           </div>
         </div>
+
         <div class="col-md-4 right-box">
-          <div class="row mt-3">
-            <div class="col-6"> <p>Location</p> </div> 
-            <div class="col-6"> <p>서울 근무</p> </div> 
-            <div class="col-6"> <p>Age</p> </div> 
-            <div class="col-6"> <p>많음</p> </div>
-            <div class="col-6"> <p>Experience</p> </div> 
-            <div class="col-6"> <p>신입</p> </div>
-            <div class="col-6"> <p>School</p> </div> 
-            <div class="col-6"> <p>천조국대 토목학과</p> </div>
+          <div class="row ms-4">
+            <div class="col-6"><p>Location</p></div>
+            <div class="col-6"><p>경기도 김포시</p></div>
+            <div class="col-6"><p>Age</p></div>
+            <div class="col-6"><p>91년생</p></div>
+            <div class="col-6"><p>Experience</p></div>
+            <div class="col-6"><p>신입</p></div>
+            <div class="col-6"><p>School</p></div>
+            <div class="col-6"><p>천조국대 토목학과</p></div>
           </div>
         </div>
+
       </div>
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
