--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       </div>
     </div>
 
+    <div class="container mt-4">
+      <div class="row">
+        <div class="col-1 left-line pb-2">Profile</div>
+        <div class="col-11 right-line"></div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
