--- a/index.html
+++ b/index.html
@@ -46,10 +46,79 @@
       </div>
     </div>
 
-    <div class="container mt-4">
+    <div class="container mt-4 ps-4 pe-4">
       <div class="row">
         <div class="col-1 left-line pb-2">Profile</div>
         <div class="col-11 right-line"></div>
+      </div>
+    </div>
+
+    <div class="container mt-4">
+      <div class="row">
+        <div class="col-md-3 ps-0">
+          <div class="card white-box-ver1">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">WORKS</h5>
+              <p class="card-text">With supporting text <br/>below as a natural <br/>lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card white-box-ver1">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">ABOUT</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <div class="mid-line"></div>
+              <h5 class="card-title fw-bold">SKILLS</h5>
+              <div class="row icons mt-3">
+                <div class="col-2 icon">HTML5</div>
+                <div class="col-2 icon">JavaScript</div>
+                <div class="col-2 icon">CSS3</div>
+                <div class="col-2 icon">REACT</div>
+                <div class="col-2 icon">BootStrap</div>
+                <div class="col-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card white-box-ver1 text-center">
+            <div class="card-body">
+              <i class="fab fa-github git-icon"></i>
+              <p class="card-text">Find me at github.com</p>
+              <button type="button" class="btn btn-primary btn-sm btn">Sign Up</button>
+              <a href="#" class="">Already a member?</a>
+            </div>
+          </div>
+
+          <div class="friends">
+            <p>People You Might Know</p>
+            <div class="mid-line"></div>
+
+            <div class="d-flex friends-list mb-3">
+              <div class="flex-shrink-0">
+                <img src="./image/profile-pic.png" width= 70px>
+              </div>
+              <div class="flex-grow-1">
+                <h6>Apeachicetea</h6>
+                <p>Front-end Designer</p>
+                <i class="fas fa-map-marker-alt col-12"> 경기도 김포시</i>
+              </div>
+            </div>
+
+            <div class="d-flex friends-list">
+              <div class="flex-shrink-0">
+                <img src="./image/profile-pic.png" width= 70px>
+              </div>
+              <div class="flex-grow-1">
+                <h6>Apeachicetea</h6>
+                <p>Front-end Designer</p>
+                <i class="fas fa-map-marker-alt col-12"> 경기도 김포시</i>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
 
