--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row white-box mt-5">
 
-        <div class="col-md-8">
+        <div class="col-md-8 mb-4">
           <div class="d-flex">
             <div class="flex-shrink-0">
               <img src="./image/profile-pic.png">
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 right-box">
+        <div class="col-md-4 mt-4 right-box">
           <div class="row ms-4">
             <div class="col-6"><p>Location</p></div>
             <div class="col-6"><p>경기도 김포시</p></div>
@@ -55,7 +55,7 @@
 
     <div class="container mt-4">
       <div class="row">
-        <div class="col-md-3 ps-0">
+        <div class="col-md-3 ps-0 mb-2">
           <div class="card white-box-ver1">
             <div class="card-body">
               <h5 class="card-title fw-bold">WORKS</h5>
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ps-0 mb-2">
           <div class="card white-box-ver1">
             <div class="card-body">
               <h5 class="card-title fw-bold">ABOUT</h5>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 ps-0">
           <div class="card white-box-ver1 text-center">
             <div class="card-body">
               <i class="fab fa-github git-icon"></i>
